[origin/bugfix/ECCI-516-Spacing-between-News-Article-body-text-and-Related-News-block-too-small] p tag moved to news

--- a/themes/custom/essex/css/news.css
+++ b/themes/custom/essex/css/news.css
@@ -187,6 +187,14 @@ div:has(.featured-teaser),
     flex-direction: column;
 }
 
+.featured-news__card article .card-content p,
+.news-card article .card-content p {
+    --font-size: clamp(1rem, 0.85rem + 0.5vw, 1.125rem);
+    --line-height: 1.5;
+    font-size: var(--font-size);
+    line-height: var(--line-height);
+}
+
 .featured-news__card article .card-content .node__content,
 .news-card article .card-content .node__content {
     height: 100%;
